Screeb size changes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="content">
                 <h3>Kids Corner</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit velit ea suscipit minima veniam sit.</p>
                 <a href="#" class="btn2">Learn More</a>
             </div>
         </div>
@@ -120,7 +120,7 @@
             </div>
             <div class="content">
                 <h3>Work & Life</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde </p>
                 <a href="#" class="btn2">Learn More</a>
             </div>
         </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="content">
                 <h3>Women Empowerment</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde </p>
                 <a href="#" class="btn2">Learn More</a>
             </div>
         </div>
@@ -140,7 +140,7 @@
             </div>
             <div class="content">
                 <h3>Self Discovery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi.</p>
                 <a href="#" class="btn2">Learn More</a>
             </div>
         </div>
