--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juggling With Mom's</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <div class="contact-container">
+        <div class="contact-background">
+            <h1>Let's Discuss How We Can Help You</h1>
+        </div>
+        <div class="contact-info">
+            <h2>Contact Details</h2>
+            <p><strong>Address:</strong> Nairobi County, Kenya</p>
+            <p><strong>Phone:</strong> +254 729 442536</p>
+            <p><strong>Inquire:</strong> <a href="https://wa.link/qah82m" target="_blank">What's App</a></p>
+        </div>
+        <div class="contact-form">
+            <h2>Send Us a Message</h2>
+            <form>
+                <div class="form-group">
+                    <input type="text" name="name" required>
+                    <label for="name">Name</label>
+                </div>
+                <div class="form-group">
+                    <input type="email" name="email" required>
+                    <label for="email">Email</label>
+                </div>
+                <div class="form-group">
+                    <textarea name="message" rows="5" required></textarea>
+                    <label for="message">Message</label>
+                </div>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
     
-
 
 
 
