--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
+    <!--Contact details-->
+
     <div class="contact-container">
         <div class="contact-background">
             <h1>Let's Discuss How We Can Help You</h1>
@@ -16,11 +19,17 @@
         <div class="contact-info">
             <h2>Contact Details</h2>
             <p><strong>Address:</strong> Nairobi County, Kenya</p>
-            <p><strong>Phone:</strong> +254 729 442536</p>
-            <p><strong>Inquire:</strong> <a href="https://wa.link/qah82m" target="_blank">What's App</a></p>
+            <p><strong>Phone: </strong> +254 729 442536</p>
+            <p><strong>Email:</strong><a href="#"> Support@thrivingmspace.com</a></p>
+            <p><strong>Chat with us:</strong> <a href="https://wa.link/qah82m" target="_blank">WhatsApp</a></p>
         </div>
+
+
+        <!--contact form-->
+
+        
         <div class="contact-form">
-            <h2>Send Us a Message</h2>
+            <h2>Leave a Message</h2>
             <form>
                 <div class="form-group">
                     <input type="text" name="name" required>
