--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
             <img src="images/logo1.png" alt="logo" class="logo">
             <ul class="nav-links">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="hamb">
@@ -26,6 +26,9 @@
     </div>
 
 
+
+
+    <!--Blog explained post-->
 
     <div class="detailed-post">
         
