--- a/kids.html
+++ b/kids.html
@@ -104,13 +104,25 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <p>Contact us at <a href="mailto:info@kidscorner.com">info@kidscorner.com</a></p>
-            <div class="social-media">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    <footer class="footer">
+        <div class="footer-content">
+            <p>© 2024 Lucy Kariuki. Designed by <a href="https://wa.me/254788120422">Pro-Write Consultancy</a></p>
+            <div class="social-links">
+                <a href="#" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" target="_blank" aria-label="Youtube">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="#" target="_blank" aria-label="Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
             </div>
         </div>
     </footer>
