--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
             <h2>Contact Details</h2>
             <p><strong>Address:</strong> Nairobi County, Kenya</p>
             <p><strong>Phone: </strong> +254 729 442536</p>
-            <p><strong>Email:</strong><a href="#"> Support@thrivingmspace.com</a></p>
-            <p><strong>Chat with us:</strong> <a href="https://wa.link/qah82m" target="_blank">WhatsApp</a></p>
+            <p><strong>Email:</strong><a href="#"> support@thrivingmspace.com</a></p>
+            <p><strong>Chat with us:</strong><a href="https://wa.link/qah82m" target="_blank">WhatsApp</a></p>
         </div>
 
 
