--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <div class="hero">
-        <h1>Lorem Ipsum Ipsum; <span>Lorem Ipsum Ipsum</span> </h1>
+        <h1> Empower Your Motherhood Journey with a Thriving Career</h1>
+        <h2>Discover your talents, learn new skills, and build a flexible career when you join our community of empowered moms
+        </h2>
         <div class="btn-container">
             <button class="btn2">Get Started</button>
         </div>
@@ -38,7 +40,7 @@
     </div>
     <div class="about-con" id="about">
         <div class="content">
-            <h3>Lorem Ipsum</h3>
+            <h3>Balancing Motherhood and Personal Growth</h3>
             <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quasi veritatis autem obcaecati provident consectetur necessitatibus, laboriosam error repudiandae quas impedit sit officia molestiae a porro, magnam facilis temporibus minus? Temporibus iste doloremque animi unde velit ea suscipit minima veniam sit, quisquam labore inventore magni, quasi totam? Recusandae nesciunt odit non eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, quasi veritatis autem obcaecati provident consectetur necessitatibus, laboriosam error repudiandae quas impedit sit officia molestiae a porro, magnam facilis temporibus minus?
             </p>
