--- a/abot.html
+++ b/abot.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
+    <script src="https://unpkg.com/@darius/requestanimationframe-polyfill@0.1.2"></script>
+    <script src="https://unpkg.com/swiped-events@1.1.1/dist/swiped-events.min.js"></script>
+
 </head>
 <body>
     <div class="navbar">
@@ -64,6 +67,9 @@
 
   <!--service section-->
 
+
+
+
   <div class="service_con">
     <div class="service_wrapper">
         <div class="service_cont">
@@ -71,7 +77,6 @@
                 <p class="title">Our Services</p>
                 <h3>What we offer</h3>
             </div>
-            <span id="greyback"></span>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos non, amet nam nesciunt illo expedita voluptatibus. Voluptates, obcaecati doloremque dicta quo necessitatibus nostrum, esse, exercitationem rem error distinctio architecto sint.</p>
         </div>
         <div class="service_content">
@@ -122,6 +127,49 @@
                     <li>Graphic Design</li>
                     <li>Podcast Creation</li>
                 </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<!--team section-->
+
+
+<div class="team-section">
+    <h2>Meet Our Team</h2>
+    <div class="team-container">
+        <div class="team-member">
+            <img src="images/lucy-min.jpg" alt="Team Member 1">
+            <h3>Lucy Kariuki</h3>
+            <p>CEO & Founder</p>
+            <div class="socials">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="team-member">
+            <img src="images/kerich.jpg" alt="Team Member 2">
+            <h3>Phill Kingston</h3>
+            <p>Lead Developer</p>
+            <div class="socials">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="team-member">
+            <img src="images/carol.jpeg" alt="Team Member 3">
+            <h3>Mary Johnson</h3>
+            <p>Marketing Head</p>
+            <div class="socials">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </div>
