New updated features

--- a/abot.html
+++ b/abot.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="image-section">
-                <img src="images/11.jpg" alt="">
+                <img src="images/lucy-min-removebg-preview.png" alt="">
             </div>
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -77,31 +77,18 @@
                 <p class="title">Our Services</p>
                 <h3>What we offer</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos non, amet nam nesciunt illo expedita voluptatibus. Voluptates, obcaecati doloremque dicta quo necessitatibus nostrum, esse, exercitationem rem error distinctio architecto sint.</p>
+            <p>We offer professional services tailored to your needs. Our copywriting creates persuasive content that engages your audience. With ghostwriting, we bring your ideas to life, crafting compelling narratives under your name. Our content writing delivers high-quality, SEO-optimized articles and web content. Additionally, We provide training and mentorship, guiding you in developing essential skills for career and personal growth.</p>
         </div>
         <div class="service_content">
             <div class="services">
                 <div class="service_heading">
-                    <h2>Web development</h2>
+                    <h2>Content Writing</h2>
                     <i class="ri-add-line"></i>
                 </div>
                 <ul class="service_list">
-                    <li>Responsive Design</li>
-                    <li>E-commerce Development</li>
-                    <li>SEO Optimization</li>
-                    <li>Website Maintenance</li>
-                </ul>
-            </div>
-            <div class="services">
-                <div class="service_heading">
-                    <h2>Interior design</h2>
-                    <i class="ri-add-line"></i>
-                </div>
-                <ul class="service_list">
-                    <li>Space Planning</li>
-                    <li>3D Rendering</li>
-                    <li>Furniture Selection</li>
-                    <li>Color Consultation</li>
+                    <li>Blog posts</li>
+                    <li>Case Studies</li>
+                    <li>Newsletters</li>
                 </ul>
             </div>
             <div class="services">
@@ -110,22 +97,31 @@
                     <i class="ri-add-line"></i>
                 </div>
                 <ul class="service_list">
+                    <li>Web Copy</li>
+                    <li>Social media posts</li>
                     <li>SEO Copywriting</li>
-                    <li>Blog Posts</li>
-                    <li>Product Descriptions</li>
-                    <li>Technical Writing</li>
                 </ul>
             </div>
             <div class="services">
                 <div class="service_heading">
-                    <h2>Content creation</h2>
+                    <h2>Ghost Writing</h2>
                     <i class="ri-add-line"></i>
                 </div>
                 <ul class="service_list">
-                    <li>Social Media Content</li>
-                    <li>Video Production</li>
-                    <li>Graphic Design</li>
-                    <li>Podcast Creation</li>
+                    <li>LinkedIn</li>
+                    <li>Facebook</li>
+                    <li>Book Ghost writing</li>
+                </ul>
+            </div>
+            <div class="services">
+                <div class="service_heading">
+                    <h2>Training & Mentorship</h2>
+                    <i class="ri-add-line"></i>
+                </div>
+                <ul class="service_list">
+                    <li>Upcoming Copywriters</li>
+                    <li>Students</li>
+                    <li>Enterpreneurs</li>
                 </ul>
             </div>
         </div>
@@ -202,9 +198,7 @@
 </footer>
 
 
-    <script src="script.js">
-
-    </script>
+    <script src="script.js"></script>
 
 </body>
 </html>
