--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img src="images/log.png" alt="logo" class="logo">
+            <img src="images/logo2-removebg-preview.png" alt="logo" class="logo">
             <ul class="nav-links">
                 <li class="active"><a href="#hero">Home</a></li>
                 <li><a href="abot.html">About</a></li>
@@ -128,7 +128,7 @@
         <p class="conclusion">With Thriving Moms’ Space, you can create a life where your role as a mother and professional aspirations complement each other beautifully.</p>
 
         <div class="btn_container">
-            <button>Get Started Now</button>
+            <button>Work With Us</button>
         </div>
     </section>
 
