--- a/abot.html
+++ b/abot.html
@@ -149,9 +149,9 @@
             </div>
         </div>
         <div class="team-member">
-            <img src="images/kerich.jpg" alt="Team Member 2">
-            <h3>Phill Kingston</h3>
-            <p>Lead Developer</p>
+            <img src="images/purity.jpg" alt="Team Member 2">
+            <h3>Purity Wangai</h3>
+            <p>Content Writer</p>
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -159,9 +159,9 @@
             </div>
         </div>
         <div class="team-member">
-            <img src="images/carol.jpeg" alt="Team Member 3">
-            <h3>Mary Johnson</h3>
-            <p>Marketing Head</p>
+            <img src="images/janete.jpeg" alt="Team Member 3">
+            <h3>Lynette Marima-Weru</h3>
+            <p>HR Consultant | Trainer, & Coach</p>
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -170,6 +170,43 @@
         </div>
     </div>
 </div>
+
+
+<div class="contact-section">
+    <h1>Contact Us</h1>
+    <div class="contact-info">
+        <h3>Talk to us</h3>
+        <p>We'd love to hear from you! Reach out to us using the details below.</p>
+        <ul>
+            <li>
+                <i class="fas fa-map-marker-alt"></i>
+                Nairobi County, Kenya
+            </li>
+            <li>
+                <i class="fas fa-phone-alt"></i>
+                (+254) 7 29 442 536
+            </li>
+            <li>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:info@thrivingmomspace.com">info@thrivingmomspace.com</a>
+            </li>
+            <li>
+                <i class="fab fa-whatsapp"></i>
+                <a href="https://wa.me/254729442536">Chat with us</a>
+            </li>
+        </ul>
+    </div>
+    <div class="contact-form">
+        <h3>Send a Message</h3>
+        <form action="#" method="post">
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+</div>
+
 
 
 <!--footer-->
