New commit changes

--- a/abot.html
+++ b/abot.html
@@ -121,12 +121,13 @@
                 <ul class="service_list">
                     <li>Upcoming Copywriters</li>
                     <li>Students</li>
-                    <li>Enterpreneurs</li>
+                    <li>Entrepreneurs</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
@@ -141,7 +142,7 @@
         <div class="team-member">
             <img src="images/lucy-min.jpg" alt="Team Member 1">
             <h3>Lucy Kariuki</h3>
-            <p>CEO & Founder</p>
+            <p>CEO & Founder of Thriving Moms Space</p>
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
