New layout changes

--- a/blog.html
+++ b/blog.html
@@ -11,30 +11,31 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img src="images/logo1.png" alt="logo" class="logo">
+            <img src="images/Thriving Space logo 2-01.png" alt="logo" class="logo">
             <ul class="nav-links">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="abot.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="hamb">
-                <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
     </div>
 
+<!--whats app float-->
 
+<a href="https://wa.me/254729442536" class="whatsapp_float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
 
     <!--Blog explained post-->
 
     <div class="detailed-post">
-        
-        <div class="image">
-            <img src="images/9-min.jpg" alt="Description of the image">
-        </div>
+
         <div class="content">
             <h1>Work & Life</h1>
             <div class="columns">
@@ -52,9 +53,10 @@
                         <li>How to stay productive while maintaining a healthy lifestyle</li>
                         <li>Real-life examples and case studies</li>
                     </ul>
-                    <p>For more resources and information, register <a href="#">Resources</a>.</p>
                 </div>
             </div>
+
+            
         </div>
 
 
@@ -62,7 +64,7 @@
             <h1>Women Empowerment</h1>
             <div class="columns">
                 <div class="column work">
-                    <h2>Lorem Ipsum</h2>
+                    <h2>Self Discovery</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde.</p>
                     <p>In this detailed post, we will explore the balance between work and life, how to manage stress, and tips for achieving a healthy work-life balance. We'll also discuss the importance of setting boundaries, taking breaks, and prioritizing your mental and physical health.</p>
                 </div>
@@ -78,6 +80,11 @@
                     <p>For more resources and information, register <a href="#">Resources</a>.</p>
                 </div>
             </div>
+
+            <div class="image">
+                <img src="images/9-min.jpg" alt="Description of the image">
+            </div>
+
             <a href="index.html" class="btn2">Back to Home Page</a>
         </div>
     </div>
