--- a/kids.html
+++ b/kids.html
@@ -10,12 +10,12 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img src="images/kid.png" alt="logo" class="logo">
+            <img src="images/Thriving Space logo 2-01.png" alt="logo" class="logo">
             <ul class="nav-links">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#hero">Activities</a></li>
-                <li><a href="#games">Games</a></li>
-
+                <li class="active"><a href="#hero">Home</a></li>
+                <li><a href="abot.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="hamb">
                 <span></span>
@@ -127,7 +127,7 @@
         </div>
     </footer>
 
-    <script src="script.js">
+    <script>
         function calculateSum() {
             const num1 = parseFloat(document.getElementById('num1').value);
             const num2 = parseFloat(document.getElementById('num2').value);
