--- a/abot.html
+++ b/abot.html
@@ -55,7 +55,7 @@
                     <a href="#" class="read-more" data-target="read-more">Read More</a>
                     
                     <div class="button">
-                        <a href="#">Request a call back</a>
+                        <a href="#">Partner With Lucy</a>
                     </div>
                 </div>
             </div>
@@ -133,6 +133,8 @@
                     <li>Entrepreneurs</li>
                 </ul>
             </div>
+
+            <p>Ready to Transform Your Brand? <a href="#">Start Here</a></p>
         </div>
     </div>
 </div>
