--- a/blog.html
+++ b/blog.html
@@ -37,15 +37,16 @@
     <div class="detailed-post">
 
         <div class="content">
-            <h1>Work & Life</h1>
+            <h1>Explore Ways To Better Yourself</h1>
+            <h2>Work & Life</h2>
             <div class="columns">
                 <div class="column work">
-                    <h2>Work</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde.</p>
-                    <p>In this detailed post, we will explore the balance between work and life, how to manage stress, and tips for achieving a healthy work-life balance. We'll also discuss the importance of setting boundaries, taking breaks, and prioritizing your mental and physical health.</p>
+                    <h3>Work</h3>
+                    <p>Maintaining a healthy work-life balance is vital for overall well-being. It involves setting clear boundaries between work and personal time, prioritizing both mental and physical health, and ensuring regular breaks to stay refreshed.
+                    Effective time management and open communication with employers can help balance responsibilities. Engaging in personal interests and hobbies also contributes to a more satisfying and balanced life.</p>
                 </div>
                 <div class="column life">
-                    <h2>Life</h2>
+                    <h3>Life</h3>
                     <p>Additional sections and content can go here, such as:</p>
                     <ul>
                         <li>The importance of time management</li>
@@ -61,15 +62,14 @@
 
 
         <div class="content">
-            <h1>Women Empowerment</h1>
+            <h2>Women Empowerment</h2>
             <div class="columns">
                 <div class="column work">
-                    <h2>Self Discovery</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus iste doloremque animi unde.</p>
-                    <p>In this detailed post, we will explore the balance between work and life, how to manage stress, and tips for achieving a healthy work-life balance. We'll also discuss the importance of setting boundaries, taking breaks, and prioritizing your mental and physical health.</p>
+                    <h3>Self Discovery</h3>
+                    <p>Self-discovery involves exploring and understanding your own values, interests, and goals. It’s about finding what truly matters to you and aligning your work and life with those insights. This journey requires self-reflection, setting personal boundaries, and prioritizing activities that bring you joy and fulfillment. Embracing this process can lead to a more meaningful and satisfying life, both professionally and personaly.</p>
                 </div>
                 <div class="column life">
-                    <h2>Stress Management</h2>
+                    <h3>Stress Management</h3>
                     <p>Additional sections and content can go here, such as:</p>
                     <ul>
                         <li>The importance of time management</li>
