semi-final commits

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- About Section -->
     <div class="about">
-        <h2>Why Thriving Moms Space</h2>
+        <h2>Why Thriving Moms' Space</h2>
     </div>
     <div class="about-con" id="about">
         <div class="content">
