--- a/abot.html
+++ b/abot.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init("EVxKkJEdp05QG4v1s"); // Replace with your actual User ID from EmailJS
+            emailjs.init("EVxKkJEdp05QG4v1s"); 
         })();
     </script>
 
