--- a/abot.html
+++ b/abot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thriving Moms Space</title>
+    <title>Thriving/About Us</title>
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -254,7 +254,7 @@
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/purity-wangai-seo-content-writer/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/254 723 379247"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <div class="team-member">
@@ -264,7 +264,7 @@
             <div class="socials">
                 <a href="https://www.instagram.com/lynettemarima?utm_source=qr&igsh=MWpsenhlenFib3Jxbw=="><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/lynette-marima-weru"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/254 728 020284"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
