--- a/abot.html
+++ b/abot.html
@@ -254,7 +254,7 @@
             <div class="socials">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/purity-wangai-seo-content-writer/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://wa.me/254 723 379247"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/254723379247"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <div class="team-member">
@@ -264,7 +264,7 @@
             <div class="socials">
                 <a href="https://www.instagram.com/lynettemarima?utm_source=qr&igsh=MWpsenhlenFib3Jxbw=="><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/in/lynette-marima-weru"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://wa.me/254 728 020284"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/254728020284"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
