--- a/index.html
+++ b/index.html
@@ -179,13 +179,16 @@
         </div>
         <div class="contact-form">
             <h3>Send a Message</h3>
-            <form id="contact-form">
-                <input id="name" type="text" name="from_name" placeholder="Your Name" required>
-                <input id="email" type="email" name="from_email" placeholder="Your Email" required>
+            <form id="web3form" action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="05ad1aad-7eb8-4569-98d4-93e109963ae2">
+            
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
                 <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
+                <button type="submit">Submit Form</button>
             </form>
-            <p id="status-message" class="message"></p>
+            <p id="status-message"></p>
+            
         </div>
     </div>
 
